<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConfigurationLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:orientation="vertical"
    tools:context="fero.taskerplugin.dismissalarm.action.ui.ConfigurationUpdateAlarmActivity" >

    <TextView
        android:id="@+id/lblAlarmLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:labelFor="@+id/txtAlarmLabel"
        android:text="@string/alarm_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtAlarmLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minLines="1" />

    <TextView
        android:id="@+id/lblHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:text="@string/heading_hours"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:width="70dp" />

        <SeekBar
            android:id="@+id/seekBarHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="23" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_background"
        android:text="@string/heading_minutes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:width="70dp" />

        <SeekBar
            android:id="@+id/seekBarMinutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="59" />
    </LinearLayout>

</LinearLayout>